<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="hello">Hello World, MessageActivity!</string>
	<string name="app_name">team68</string>
	<string name="hint">Nhập câu hỏi</string>
	<string name="send">Gửi</string>
		<string name="home">home</string>
			<string name="scan">scan</string>
	<string name="speak">voice</string>
	<string name="reload">Thử lại</string>
	<string name="title"> NAO - An toàn giao thông </string>
	<string name="start">Bắt đầu</string>
	<string name="online_text">Robot đã online \n Nhấn bắt đầu để nói chuyện</string>
	<string name="main_empty_list">There is no recent conversation, write new message
		to start one.</string>
	<string name="btnCourse">Khóa học luật (0%)</string>
	<string name="btnConnect">Connect</string>
	<string name="btnImageScan">Tra cứu</string>
	<string name="btnTest">Kiểm tra kiến thức </string>
	<string name="btnAssistant">Trợ lý luật </string>
	<string name="btnControll">Test Robot </string>
	<string name = "btnQuit"> Tạm biệt </string>
	<string name = "btnScan"> Scan </string>
	<string name = "learnCourse"> Học an toàn giao thông </string>
	<string name = "learn0"> Học từ đầu </string>
	<string name = "learnContinue"> Tiếp tục (60%)</string>
	<string name = "listCourse"> Các bài học</string>
	<string name = "next"> sau </string>
	<string name = "prev"> trước </string>
	<string name = "ipAdds"> Ip Address </string>
	<string name = "askQuestion"> câu hỏi ở đây ? </string>
	
</resources>